# Eventure-geolocationService

./: .gitignore  Dockerfile  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/versions/: 2024_11_29_1356-e9f41951df6d_added_start_and_end_date_for_event.py  2024_11_29_1417-911b44fa0e07_added_start_and_end_date_for_event.py
api_v1/: __init__.py
api_v1/auth/: __init__.py  auth.py
api_v1/events/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
api_v1/usersGeo/: __init__.py  crud.py  schemas.py  views.py
api_v1/usersGeo/geolocationWebSocket/: __init__.py  connectionManager.py  geoWS.py
core/: config.py
core/models/: UserGeo.py  __init__.py  db_helper.py  event.py
